--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     
                     <div class="text-box">
                         <h4 class="icon-title card-title mbr-black mbr-fonts-style display-7"><strong>Competencias y resultados</strong></h4>
-                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">Asi es como se hace necesario contar con soluciones especializadas en el campo de la seguridad digital que suplan los vacios tecnicos y de datos personales digitales expuestos de un agente o persona vulnerable la cual requiera contratar los servicios de nuestro experimentado equipo tecnico para dar solución a su necesidad.<br></h5>
+                        <h5 class="icon-text mbr-black mbr-fonts-style display-4">Así es como se hace necesario contar con soluciones especializadas en el campo de la seguridad digital que suplan los vacíos técnicos y de datos personales digitales expuestos de un agente o persona vulnerable la cual requiera contratar los servicios de nuestro experimentado equipo tecnico para dar solución a su necesidad.<br></h5>
                     </div>
                 </div>
                 <div class="item mbr-flex last">
@@ -260,8 +260,8 @@
             <strong>Testimonios de Clientes satisfechos</strong></h3>
         <div class="row justify-content-center">
             <div class="card col-12 col-md-6">
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Hace algún tiempo, me encontraba en una situación de extrema preocupación debido a un problema de seguridad en mi hogar. Mi celular estaba funcionando mal, y sospechaba de que una persona probablemente me tenia hackeado y por mi trabajo estaba muy preocupado ya que soy agente del gobierno.<br>
-                    <br>Fue entonces cuando decidí buscar ayuda profesional y me topé con Check Hacking Team. Desde el primer contacto, me sorprendió la amabilidad y profesionalismo con el que fui atendido. Me escucharon atentamente y comprendieron la magnitud de mi situación y me ayudaron a resolver satisfactoriamente mi problema. En verdad gracias.<br><br></p>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Hace algún tiempo, me encontraba en una situación muy preocupante debido a un problema de seguridad en mi hogar. Mi celular estaba funcionando mal, y sospechaba de que una persona probablemente me tenia hackeado, además por mi trabajo estaba muy preocupado ya que trabajo con el gobierno.<br>
+                    <br>fue entonces cuando decidí buscar ayuda profesional y di con este equipo de hackers éticos. Desde el primer contacto, me sorprendió la amabilidad y profesionalismo con el que me orientaron y disiparon cada una de mis dudas. Me escucharon atentamente y comprendieron la magnitud de mi situación, me ayudaron a resolver satisfactoriamente mi problema. En verdad estoy muy agradecido.<br><br></p>
                 <div class="d-flex mb-md-0 mb-4">
                     <div class="image-wrapper">
                         <img src="assets/images/mbr-20.jpg" alt="Cliente satisfecho con el trabajo de seguridad informática">
@@ -291,8 +291,8 @@
             </div>
              <div class="row justify-content-center">
             <div class="card col-12 col-md-6">
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Hace algún tiempo, me encontraba en una situación de extrema preocupación debido a un problema de seguridad en mi hogar. Mi celular estaba funcionando mal, y sospechaba de que una persona probablemente me tenia hackeado y por mi trabajo estaba muy preocupado ya que soy agente del gobierno.<br>
-                    <br>Fue entonces cuando decidí buscar ayuda profesional y me topé con Check Hacking Team. Desde el primer contacto, me sorprendió la amabilidad y profesionalismo con el que fui atendido. Me escucharon atentamente y comprendieron la magnitud de mi situación y me ayudaron a resolver satisfactoriamente mi problema. En verdad gracias.<br><br></p>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Estaba muy preocupada por que en mi hogar la relacion con mi esposo estaba tornandose imposible, todas sus acciones me hacien pensar en que tuviera una amante, asi por mucho tiempo viví con desasociego<br>
+                    <br>fue entonces que una amiga me hablo de ustedes, no aguante mas y me decidí a contactarlos, nunca he tomado una mejor decision que esta, descubri lo que realmente estaba pasando, pude confirmar mis sospechas y hacer esto y confrontarlo fue lo mas valiente que he hecho en mi vida.<br><br></p>
                 <div class="d-flex mb-md-0 mb-4">
                     <div class="image-wrapper">
                         <img src="assets/images/foto2.png" alt="Cliente satisfecho con el trabajo de seguridad informática">
