--- a/index.html
+++ b/index.html
@@ -304,6 +304,21 @@
                     </div>
                 </div>
             </div>
+            <div class="row justify-content-center">
+                <div class="card col-12 col-md-6">
+                    <p class="mbr-text mbr-fonts-style mb-4 display-4">Una amiga me los recomendo y la verdad que me sorprendieron. Necesitaba encontrar alguna información del papa de mi hijo que nos abandono y nos dejo a la suertebr>
+                        <br>lo estuve buscando como aguja en un pajar, ya habia perdido las esperanzas, pero gracias a este servicio logre obtener información relevante que me condujo a su paradero.<br><br></p>
+                    <div class="d-flex mb-md-0 mb-4">
+                        <div class="image-wrapper">
+                            <img src="assets/images/foto3.png" alt="Cliente satisfecho con el trabajo de seguridad informática">
+                        </div>
+                        <div class="text-wrapper">
+                            <p class="name mbr-fonts-style mb-1 display-4"><strong>Ingrid E. Pizano</strong></p>
+                            <p class="position mbr-fonts-style display-4">
+                                <strong>Cliente</strong></p>
+                        </div>
+                    </div>
+                </div>
 
 
             
