--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     <p>Política de Privacidad | Términos y Condiciones</p>
     <ul class="social-icons">
       <li><a href="#" class="whatsapp-icon"><i class="fa fa-whatsapp"></i></a></li>
-      <!-- Agrega más iconos de redes sociales aquí -->
+      <!-- Agrega más iconos de redes sociales aquí. -->
     </ul>
   </footer>
 </html>
