--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="card col-12 col-md-6">
-                    <p class="mbr-text mbr-fonts-style mb-4 display-4">Una amiga me los recomendo y la verdad que me sorprendieron. Necesitaba encontrar alguna información del papa de mi hijo que nos abandono y nos dejo a la suertebr>
+                    <p class="mbr-text mbr-fonts-style mb-4 display-4">Una amiga me los recomendo y la verdad que me sorprendieron. Necesitaba encontrar alguna información del papa de mi hijo que nos abandono y nos dejo a la suertebr<br>
                         <br>lo estuve buscando como aguja en un pajar, ya habia perdido las esperanzas, pero gracias a este servicio logre obtener información relevante que me condujo a su paradero.<br><br></p>
                     <div class="d-flex mb-md-0 mb-4">
                         <div class="image-wrapper">
@@ -327,7 +327,25 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="row justify-content-center">
+                    <div class="card col-12 col-md-6">
+                        <p class="mbr-text mbr-fonts-style mb-4 display-4">Hace unos meses, mi vida dio un giro inesperado. Todo comenzó con un correo electrónico aparentemente inofensivo. Al abrirlo, mi mundo digital se desmoronó.<br> 
+                            <br>Mi cuenta bancaria estaba vacía, mis redes sociales eran un caos y mi identidad estaba en manos de un desconocido.<br>
+                            Desesperada, busqué ayuda en línea. Fue entonces cuando encontré esta pagina web y que bueno haberlo hecho.<br>
+                            Después de contactarlos, su equipo de expertos se puso a trabajar. Rastrearon la fuente del ataque, fortalecieron mis contraseñas y restauraron mi seguridad. Pero no fue<br>
+                            solo eso. Me enseñaron a protegerme mejor en el futuro, a reconocer señales de peligro y a mantener mi privacidad.<br>
+                            Hoy, puedo decir que estoy libre. Gracias a ellos recuperé mi vida digital y aprendí a defenderme.<br><br></p>
+                        <div class="d-flex mb-md-0 mb-4">
+                            <div class="image-wrapper">
+                                <img src="assets/images/foto3.png" alt="Cliente satisfecho con el trabajo de seguridad informática">
+                            </div>
+                            <div class="text-wrapper">
+                                <p class="name mbr-fonts-style mb-1 display-4"><strong>Carol Buitrago Tovar </strong></p>
+                                <p class="position mbr-fonts-style display-4">
+                                    <strong>Cliente</strong></p>
+                            </div>
+                        </div>
+                    </div>
 
             
         </div>
