--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Servicios avanzados de seguridad informática y hacking ético. Protégete contra ciberamenazas con el equipo de Check Haking Team. Más de 10 años de experiencia en el mercado.">
     <meta name="keywords" content="hacking, hackear whatsapp, hacking ético, hackers éticos, hacker, seguridad informática, ciberseguridad, protección de datos, información personal, soluciones digitales, dispositivos electrónicos, privacidad digital">
     <title>Servicios de Hackers Éticos y Seguridad Informática</title>
+    <title id="titulo-animado">Servicios de Hackers Éticos y Seguridad Informática</title>
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
