--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="canonical" href="https://hackerspys.github.io/">
     <meta name="description" content="Servicios avanzados de seguridad informática y hacking ético. Protégete contra ciberamenazas con el equipo de Check Haking Team. Más de 10 años de experiencia en el mercado.">
     <meta name="keywords" content="hacking, hackear whatsapp, hacking ético, hackers éticos, hacker, seguridad informática, ciberseguridad, protección de datos, información personal, soluciones digitales, dispositivos electrónicos, privacidad digital">
-    <title>Servicios de Hackers Éticos y Seguridad Informática</title>
-    <title id="titulo-animado">Servicios de Hackers Éticos y Seguridad Informática</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
     <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
@@ -17,7 +16,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="assets/dropdown/css/style.css">
-    <link rel="stylesheet" href="assets/socicon/css/styles.css">
+    <link rel="stylesheet" href="assets/socicon/css/style.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap"></noscript>
@@ -72,7 +71,7 @@
         <div class="container">
             <div class="media-container">
                 <div class="col-md-12 col-lg-10 m-auto align-center">
-                    <h1 class="mbr-section-title mbr-white mbr-fonts-style mb-3 display-1"><strong>Servicios de Hackers Éticos y Seguridad Informática</strong></h1>
+                    <h1 class="animated-title"style="font-size: 7rem;">Servicios de Hackers Éticos y Seguridad Informática</h1>
                     <p class="mbr-text mbr-white mbr-fonts-style display-7">
                         ¿Alguna vez has sentido que algo no está bien en tu relación o tienes sospechas de una infidelidad por parte de tu pareja?, ¿sientes que alguien está accediendo a tu dispositivo y puede estar extrayendo información?, ¿han robado tus datos personales y ahora estás expuesta en internet?, ¿necesitas localizar a alguien?, ¿te preocupa la seguridad de tus dispositivos electrónicos?. Si es así, entonces nuestros servicios de hacking informático pueden ayudarte.</p>
                     
