--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
             <strong>Testimonios de Clientes satisfechos</strong></h3>
         <div class="row justify-content-center">
             <div class="card col-12 col-md-6">
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Hace algún tiempo, me encontraba en una situación muy preocupante debido a un problema de seguridad en mi hogar. Mi celular estaba funcionando mal, y sospechaba de que una persona probablemente me tenia hackeado, además por mi trabajo estaba muy preocupado ya que trabajo con el gobierno.<br>
-                    <br>fue entonces cuando decidí buscar ayuda profesional y di con este equipo de hackers éticos. Desde el primer contacto, me sorprendió la amabilidad y profesionalismo con el que me orientaron y disiparon cada una de mis dudas. Me escucharon atentamente y comprendieron la magnitud de mi situación, me ayudaron a resolver satisfactoriamente mi problema. En verdad estoy muy agradecido.<br><br></p>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Estuve en una situación muy difícil hace un tiempo. Mi teléfono estaba funcionando mal y tenía la sospecha de que alguien lo había hackeado. Como alguien que trabaja con el gobierno, sabía que tenía que tomármelo en serio. La idea de que mis datos personales se vieran comprometidos me quitaba el sueño.<br>
+                    <br>Fue entonces cuando decidí ponerme en contacto con un equipo de hackers éticos para que me ayudaran. Desde el primer contacto, me impresionó su amabilidad y profesionalidad. Escucharon atentamente mis inquietudes, hicieron las preguntas correctas y me tranquilizaron. Comprendieron la gravedad de mi situación y trabajaron incansablemente para resolver el problema. Todavía estoy agradecido por su ayuda, realmente me salvaron de una situación potencialmente desastrosa.<br><br></p>
                 <div class="d-flex mb-md-0 mb-4">
                     <div class="image-wrapper">
                         <img src="assets/images/mbr-20.jpg" alt="Cliente satisfecho con el trabajo de seguridad informática">
@@ -330,7 +330,7 @@
                 </div>
             </div>
             <div class="card col-12 col-md-6">
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Muy agradecido con ustedes por resolver exitosamente mi caso cuando nadie más pudo. Localizaron eficientemente a la persona que necesitenco
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Muy agradecido con ustedes por resolver exitosamente mi caso cuando nadie más pudo. Localizaron eficazmente a la persona que buscaba
 <br>
 <br>Profesionales, hábiles y confidenciales. Superaron mis expectativas.</p>
                 <div class="d-flex mb-md-0 mb-4">
@@ -394,6 +394,25 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="row justify-content-center">
+                        <div class="card col-12 col-md-6">
+                            <p class="mbr-text mbr-fonts-style mb-4 display-4">Estuve en un escenario de pesadilla hace unos meses. Había notado actividad extraña en las cuentas de redes sociales de mi empresa y sospechaba que alguien había obtenido acceso no autorizado.<br> 
+                                <br>Como propietario de una pequeña empresa, sabía que mi reputación estaba en juego. La idea de que alguien publicara contenido malicioso o robara información confidencial de los clientes me mantenía despierto por la noche.<br>
+                                Sabía que necesitaba ayuda experta, así que me puse en contacto con éste equipo de hackers éticos.<br>
+                                Trabajaron rápidamente para identificar el origen del problema e implementar una solución, e incluso se tomaron el tiempo para educarme sobre cómo proteger mi negocio contra futuras amenazas.<br>
+                                Mirando hacia atrás, estoy agradecido por su intervención, fue un cambio de juego para mi negocio<br><br></p>
+                            <div class="d-flex mb-md-0 mb-4">
+                                <div class="image-wrapper">
+                                    <img src="assets/images/foto3.png" alt="Cliente satisfecho con el trabajo de seguridad informática">
+                                </div>
+                                <div class="text-wrapper">
+                                    <p class="name mbr-fonts-style mb-1 display-4"><strong>Edgar Lopez</strong></p>
+                                    <p class="position mbr-fonts-style display-4">
+                                        <strong>Cliente</strong></p>
+                                </div>
+                            </div>
+                        </div>
 
             
         </div>
