--- a/index.html
+++ b/index.html
@@ -127,20 +127,20 @@
 
 <body class="bg-gray-100 text-gray-800">
 
-  <!-- Navbar -->
-  <nav class="navbar flex items-center justify-between p-4">
-    <div class="text-white">
-      <a href="#" class="text-2xl font-bold">Shield Cyber Fortress</a>
-    </div>
-    <ul class="flex space-x-6">
-  <li><a href="#about" class="text-white hover:text-orange-500">Acerca</a></li>
-  <li><a href="#services" class="text-white hover:text-orange-500">Servicios</a></li>
-  <li><a href="#contact" class="text-white hover:text-orange-500">Contacto</a></li>
-</ul>
-<div>
-  <a href="#contact" class="cta-button">Contáctanos</a>
-</div>
-  </nav>
+<!-- Navbar -->
+<nav class="navbar flex items-center justify-between p-4">
+  <div class="text-white">
+    <a href="#" class="text-2xl font-bold">Shield Cyber Fortress</a>
+  </div>
+  <ul class="flex space-x-6">
+    <li><a href="#features20-4" class="text-white hover:text-orange-500">Acerca</a></li>
+    <li><a href="#services" class="text-white hover:text-orange-500">Servicios</a></li>
+    <li><a href="#contacts3-n" class="text-white hover:text-orange-500">Contacto</a></li>
+  </ul>
+  <div>
+    <a href="#contacts3-n" class="cta-button">Contáctanos</a>
+  </div>
+</nav>
   <!-- Hero Section -->
 <section class="hero">
   <!-- Incluye Google Fonts en la sección <head> de tu HTML -->
@@ -160,7 +160,7 @@
     <p style="margin-top: 1rem; font-size: 1.25rem; line-height: 1.5; font-family: 'Poppins', sans-serif; font-weight: 300;">
         amenazas. ¡Asegura tu futuro digital con nosotros!
     </p>
-    <a href="#services" class="cta-button" style="margin-top: 3rem; display: inline-block;">Solicita una consulta gratuita</a>
+    <a href="hackerspys.github.io" class="cta-button" style="margin-top: 3rem; display: inline-block;" target="_blank">Solicita una consulta gratuita</a>
 </div>
 </section>
   <!-- Services Section -->
@@ -353,24 +353,19 @@
 <!-- Testimonials Section -->
 <section class="testimonials">
   <h2 class="text-5xl font-bold mb-12 text-center">Testimonios de Clientes Satisfechos</h2>
+  <p class="text-xl text-center mb-8">Nuestros clientes nos recomiendan por nuestra experiencia y profesionalidad en seguridad informática</p>
   <div class="container">
-    <p class="text-2xl mb-6 text-center">
-      "Contratar a Shield Cyber Fortress fue la mejor decisión para proteger nuestra empresa. Su experiencia nos dio la tranquilidad que necesitábamos." 
-      <br/><strong>- Carlos Aldana</strong>
-    </p>
-
     <div class="row justify-content-center">
-      <div class="col-md-6 col-lg-4 mb-4">
+      <div class="col-md-6 col-lg-4 mb-6">
         <div class="testimonial">
           <p class="text-2xl mb-4">
             "Estuve en una situación muy difícil hace un tiempo. Mi teléfono estaba funcionando mal y tenía la sospecha de que alguien lo había hackeado. Como alguien que trabaja con el gobierno, sabía que tenía que tomármelo en serio. La idea de que mis datos personales se vieran comprometidos me quitaba el sueño.
             <br/><br/> 
             Fue entonces cuando decidí ponerme en contacto con un equipo de hackers éticos para que me ayudaran. Desde el primer contacto, me impresionó su amabilidad y profesionalidad. Escucharon atentamente mis inquietudes y trabajaron incansablemente para resolver el problema. Todavía estoy agradecido por su ayuda, realmente me salvaron de una situación potencialmente desastrosa."
-            <br/><strong>- Carlos Aldana</strong>
-          </p>
+            </p>
           <div class="d-flex mb-md-0 mb-4">
             <div class="image-wrapper">
-              <img alt="Cliente satisfecho con el trabajo de seguridad informática" src="assets/images/mbr-20.jpg" style="width: 50px; height: 50px; object-fit: cover;">
+              <img alt="Cliente satisfecho con el trabajo de seguridad informática" src="assets/images/mbr-20.jpg" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%;">
             </div>
             <div class="text-wrapper">
               <p class="name mbr-fonts-style mb-1 text-3xl"><strong>Carlos Aldana</strong></p>
@@ -380,17 +375,16 @@
         </div>
       </div>
 
-      <div class="col-md-6 col-lg-4 mb-4">
+      <div class="col-md-6 col-lg-4 mb-6">
         <div class="testimonial">
           <p class="text-2xl mb-4">
             "Muy agradecido con ustedes por resolver exitosamente mi caso cuando nadie más pudo. Localizaron eficazmente a la persona que buscaba. 
             <br/><br/>
             Profesionales, hábiles y confidenciales. Superaron mis expectativas."
-            <br/><strong>- Andrés Rincón</strong>
           </p>
           <div class="d-flex mb-md-0 mb-4">
             <div class="image-wrapper">
-              <img alt="Cliente satisfecho con el trabajo de hacking informático" src="assets/images/foto.png" style="width: 50px; height: 50px; object-fit: cover;">
+              <img alt="Cliente satisfecho con el trabajo de hacking informático" src="assets/images/foto.png" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%;">
             </div>
             <div class="text-wrapper">
               <p class="name mbr-fonts-style mb-1 text-3xl"><strong>Andrés Rincón</strong></p>
@@ -400,7 +394,7 @@
         </div>
       </div>
 
-      <div class="col-md-6 col-lg-4 mb-4">
+      <div class="col-md-6 col-lg-4 mb-6">
         <div class="testimonial">
           <p class="text-2xl mb-4">
             "Estaba muy preocupada por la relación con mi esposo. Todas sus acciones me hacían pensar que tuviera una amante. 
@@ -410,18 +404,17 @@
           </p>
           <div class="d-flex mb-md-0 mb-4">
             <div class="image-wrapper">
-              <img alt="Cliente satisfecho con el trabajo de seguridad informática" src="assets/images/foto2.png" style="width: 50px; height: 50px; object-fit: cover;">
+              <img alt="Cliente satisfecho con el trabajo de seguridad informática" src="assets/images/foto2.png" style="width: 100px; height: 100px; object-fit: cover; border-radius: 50%;">
             </div>
             <div class="text-wrapper">
-              <p class="name mbr-fonts-style
+              <p class="name mbr-fonts-style mb-1
+             
 <!-- Contact Section -->
 <section id="contact" class="container">
   <h2 class="text-4xl font-bold mb-8">Contáctanos</h2>
   <p class="text-xl mb-4">Obtén una consulta gratuita para identificar brechas críticas en tu sistema.</p>
   <a href="mailto:pruebasaldia2222@hotmail.com" class="cta-button">Contáctanos por email</a>
 </section>
-
-
 <section class="contacts3 map1 cid-tKvCtohMlM" data-bs-version="5.1" id="contacts3-n">
 <div class="container">
 <div class="mbr-section-head">
