--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 <div>
-    <h1 style="font-family: 'Poppins', sans-serif; font-weight: 600;">Protege tu Empresa con Servicios de Hacking Ético Profesionales</h1>
+    <h1 style="font-family: 'Poppins', sans-serif; font-weight: 600;">Protege tu Empresa con Servicios de Hacking Ético Profesional</h1>
     <p style="margin-top: 1rem; font-size: 1.25rem; line-height: 1.5; font-family: 'Poppins', sans-serif; font-weight: 300;">
         Transforma la seguridad de tu negocio: nuestros expertos en consultoría y auditoría informática,
     </p>
