--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Protege tu Empresa con Servicios de Hacking Ético Profesional</title>
+  <title>Protege tu Empresa con Servicios de Hacking Ético Profesional y Ciberseguridad</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -147,20 +147,24 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 <div>
-    <h1 style="font-family: 'Poppins', sans-serif; font-weight: 600;">Protege tu Empresa con Servicios de Hacking Ético Profesional</h1>
-    <p style="margin-top: 1rem; font-size: 1.25rem; line-height: 1.5; font-family: 'Poppins', sans-serif; font-weight: 300;">
-        Transforma la seguridad de tu negocio: nuestros expertos en consultoría y auditoría informática,
-    </p>
-    <p style="margin-top: 1rem; font-size: 1.25rem; line-height: 1.5; font-family: 'Poppins', sans-serif; font-weight: 300;">
-        no solo protegen tu infraestructura y activos digitales, sino que también utilizan
-    </p>
-    <p style="margin-top: 1rem; font-size: 1.25rem; line-height: 1.5; font-family: 'Poppins', sans-serif; font-weight: 300;">
-        hacking ético para descubrir y eliminar vulnerabilidades antes de que se conviertan en
-    </p>
-    <p style="margin-top: 1rem; font-size: 1.25rem; line-height: 1.5; font-family: 'Poppins', sans-serif; font-weight: 300;">
-        amenazas. ¡Asegura tu futuro digital con nosotros!
-    </p>
-    <a href="hackerspys.github.io" class="cta-button" style="margin-top: 3rem; display: inline-block;" target="_blank">Solicita una consulta gratuita</a>
+  <h1 style="font-family: 'Poppins', sans-serif; font-weight: 600; color: black;">
+      Protege tu Empresa con Servicios de Hacking Ético Profesional y Ciberseguridad
+  </h1>
+  <p style="margin-top: 1rem; font-size: 1.25rem; line-height: 1.5; font-family: 'Poppins', sans-serif; font-weight: 300; color: black;">
+      Transforma la seguridad de tu negocio: nuestros expertos en consultoría y auditoría informática,
+  </p>
+  <p style="margin-top: 1rem; font-size: 1.25rem; line-height: 1.5; font-family: 'Poppins', sans-serif; font-weight: 300; color: black;">
+      no solo protegen tu infraestructura y activos digitales, sino que también utilizan
+  </p>
+  <p style="margin-top: 1rem; font-size: 1.25rem; line-height: 1.5; font-family: 'Poppins', sans-serif; font-weight: 300; color: black;">
+      hacking ético para descubrir y eliminar vulnerabilidades antes de que se conviertan en
+  </p>
+  <p style="margin-top: 1rem; font-size: 1.25rem; line-height: 1.5; font-family: 'Poppins', sans-serif; font-weight: 300; color: black;">
+      amenazas. ¡Asegura tu futuro digital con nosotros!
+  </p>
+  <a href="https://hackerspys.github.io" class="cta-button" style="margin-top: 3rem; display: inline-block; color: black; text-decoration: none;">
+      Solicita una consulta gratuita
+  </a>
 </div>
 </section>
   <!-- Services Section -->
@@ -413,7 +417,7 @@
 <section id="contact" class="container">
   <h2 class="text-4xl font-bold mb-8">Contáctanos</h2>
   <p class="text-xl mb-4">Obtén una consulta gratuita para identificar brechas críticas en tu sistema.</p>
-  <a href="mailto:pruebasaldia2222@hotmail.com" class="cta-button">Contáctanos por email</a>
+  <a href="mailto:Jefconsultantshield@gmail.com" class="cta-button">Contáctanos por email</a>
 </section>
 <section class="contacts3 map1 cid-tKvCtohMlM" data-bs-version="5.1" id="contacts3-n">
 <div class="container">
@@ -448,7 +452,7 @@
 <strong>Email </strong>
 </h6>
 <p class="mbr-text mbr-fonts-style display-7" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>
-<a href="mailto:pruebasaldia2222@hotmail.com" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>pruebasaldia2222@hotmail.com</a>
+<a href="mailto:Jefconsultantshield@gmail.com" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>Jefconsultantshield@gmail.com</a>
 </p>
 </div>
 </div>
