--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
 <div class="card col-12 col-md-6">
 <div class="card-wrapper">
 <div class="image-wrapper">
-<a href="https://wa.me/3174832132" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;' target="_blank">
-<i class="fab fa-whatsapp" style="font-size: 24px; color: #25D366;"></i>
+  <a href="https://wa.me/3174832132" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out; margin-top: 10%; margin-left: -20%;' target="_blank">
+    <i class="fab fa-whatsapp" style="font-size: 28.8px; color: #25D366;"></i>
 </a>
 </div>
 <div class="text-wrapper">
@@ -439,7 +439,7 @@
 <strong>Phone</strong>
 </h6>
 <p class="mbr-text mbr-fonts-style display-5" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>
-<a href="https://wa.me/3174832132" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;' target="_blank">317 4832132</a>
+<a href="https://wa.me/3174832132" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;' target="_blank"></a>
 </p>
 </div>
 </div>
@@ -449,7 +449,7 @@
 </div>
 <div class="text-wrapper">
 <h6 class="card-title mbr-fonts-style mb-1 display-5">
-<strong>Email </strong>
+
 </h6>
 <p class="mbr-text mbr-fonts-style display-7" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>
 <a href="mailto:Jefconsultantshield@gmail.com" style='font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; transition: all 0.3s ease-in-out;'>Jefconsultantshield@gmail.com</a>
