--- a/index.html
+++ b/index.html
@@ -162,9 +162,7 @@
   <p style="margin-top: 1rem; font-size: 1.25rem; line-height: 1.5; font-family: 'Poppins', sans-serif; font-weight: 300; color: black;">
       amenazas. ¡Asegura tu futuro digital con nosotros!
   </p>
-  <a href="https://hackerspys.github.io" class="cta-button" style="margin-top: 3rem; display: inline-block; color: black; text-decoration: none;">
-      Solicita una consulta gratuita
-  </a>
+  <a href="https://hackerspys.github.io/signup/index.html" target="_blank" class="cta-button" style="margin-top: 3rem; display: inline-block; color: black; text-decoration: none; padding: 10px 20px; background-color: #007BFF; border-radius: 5px; text-align: center;" >Solicita una consulta gratuita</a>
 </div>
 </section>
   <!-- Services Section -->
